if (glfw3_FOUND)
	ADD_EXECUTABLE(fbo0 fbo0.cpp)
	#TARGET_LINK_LIBRARIES(fbo0 ${GLFW_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES})
	TARGET_LINK_LIBRARIES(fbo0 glfw GLEW ${OPENGL_LIBRARIES})
else ()
	message("fbo0 skipped.")
endif(glfw3_FOUND)

ADD_EXECUTABLE(command0 command0.cpp)
ADD_EXECUTABLE(command1 command1.cpp)
ADD_EXECUTABLE(svg0 svg0.cpp)
ADD_EXECUTABLE(xml0 xml0.cpp)
ADD_EXECUTABLE(system0 system0.cpp)
ADD_EXECUTABLE(system1 system1.cpp)
ADD_EXECUTABLE(octree0 octree0.cpp)
ADD_EXECUTABLE(kdtree0 kdtree0.cpp)
ADD_EXECUTABLE(normalize0 normalize0.cpp)
ADD_EXECUTABLE(timer0 timer0.cpp)
ADD_EXECUTABLE(color0 color0.cpp)
ADD_EXECUTABLE(routine0 routine0.cpp)
ADD_EXECUTABLE(volume0 volume0.cpp )
ADD_EXECUTABLE(volume1 volume1.cpp)
ADD_EXECUTABLE(ccl0 ccl0.cpp)
ADD_EXECUTABLE(cast0 cast0.cpp)
ADD_EXECUTABLE(volcreator0 volcreator0.cpp)
ADD_EXECUTABLE(parallel0 parallel0.cpp)
if (LINUX)
	TARGET_LINK_LIBRARIES(parallel0 pthread)
endif ()
